--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="node_modules/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="node_modules/bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="node_modules/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="node_modules/bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -40,12 +40,12 @@
       <div class="container-fluid">
         <div class="row">
 
-          <div class="col-md-2">
+          <div class="col-sm-2 col-xs-2">
             <div class="upwards-expandable reddit simple-padded">
               <div class="screen"></div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-sm-2 col-xs-2">
             <div class="upwards-expandable facebook simple-padded">
               <div class="screen"></div>
             </div>
@@ -63,8 +63,8 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="node_modules/bootstrap/assets/js/vendor/holder.min.js"></script>
+    <script src="node_modules/bootstrap/docs/assets/js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="node_modules/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="node_modules/bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
