--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
     <div class="site-wrapper">
       <img id="image-background" src="assets/wallpapers/backgroundimage.jpg" class="site-background">
 
+      <div id="explorer-windows"></div>
+
       <div id="control-buttons" class="btn-group-vertical">
         <button id="new-window-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/ic_folder_black_24dp/web/folder-light-gray.png">
+          <img class="control-button-image" src="assets/ic_add_box_black_24dp/web/new.png">
         </button>
         <button id="reset-windows-button" type="button" class="btn btn-default btn-lg">
           <img class="control-button-image" src="assets/ic_layers_clear_black_24dp/web/reset-windows.png">
         </button>
+        <button id="lock-windows-button" type="button" class="btn btn-default btn-lg">
+          <img class="control-button-image" src="assets/ic_lock_black_24dp/web/lock.png">
+        </button>
       </div>
-
-      <div id="explorer-windows"></div>
     </div>
 
     <!-- FOOTER -->
