--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <img class="control-button-image" src="assets/ic_lock_black_24dp/web/lock.png">
         </button>
       </div>
+      <div class="triangle"></div>
     </div>
 
     <!-- FOOTER -->
