--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
       </div>
     </footer>
 
+    <!-- SVGS -->
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
