added folders and stuff

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -40,13 +40,13 @@
 
       <div id="control-buttons" class="btn-group-vertical">
         <button id="new-window-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/ic_add_box_black_24dp/web/new.png">
+          <img class="control-button-image" src="assets/new.png">
         </button>
         <button id="reset-windows-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/ic_layers_clear_black_24dp/web/reset-windows.png">
+          <img class="control-button-image" src="assets/reset-windows.png">
         </button>
         <button id="lock-windows-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/ic_lock_black_24dp/web/lock.png">
+          <img class="control-button-image" src="assets/lock.png">
         </button>
       </div>
       <div class="triangle"></div>
