--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/favicon.ico">
 
     <title>Carousel Template for Bootstrap</title>
 
@@ -34,19 +34,19 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <img id="image-background" src="assets/wallpapers/backgroundimage.jpg" class="site-background">
+      <img id="image-background" src="wallpapers/backgroundimage.jpg" class="site-background">
 
       <div id="explorer-windows"></div>
 
       <div id="control-buttons" class="btn-group-vertical">
         <button id="new-window-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/new.png">
+          <img class="control-button-image" src="new.png">
         </button>
         <button id="reset-windows-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/reset-windows.png">
+          <img class="control-button-image" src="reset-windows.png">
         </button>
         <button id="lock-windows-button" type="button" class="btn btn-default btn-lg">
-          <img class="control-button-image" src="assets/lock.png">
+          <img class="control-button-image" src="lock.png">
         </button>
       </div>
       <div class="triangle"></div>
@@ -62,7 +62,7 @@
               <div class="screen" id = 'stop'></div>
             </div>
             <div class="expanding-circle-box">
-              <img src="assets/wallpapers/placeholder.jpg" class="expanding-circle">
+              <img src="wallpapers/placeholder.jpg" class="expanding-circle">
             </div>
           </div>
           <div class="col-sm-2 col-xs-2 bottom-bar-element">
@@ -71,7 +71,7 @@
               </div>
             </div>
             <div class="expanding-circle-box">
-              <img src="assets/wallpapers/backgroundimage.jpg" class="expanding-circle">
+              <img src="wallpapers/backgroundimage.jpg" class="expanding-circle">
             </div>
           </div>
         </div>
