--- a/dashboard/test-scripts/demo.html
+++ b/dashboard/test-scripts/demo.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="test-script.css" rel="stylesheet">
   </head>
   <body>
     <div id="tileable">
