--- a/dashboard/test-scripts/demo.html
+++ b/dashboard/test-scripts/demo.html
@@ -5,10 +5,16 @@
     <link href="test-script.css" rel="stylesheet">
   </head>
   <body>
-    <div id="tileable">
+    <div id="tileable" class="example-manager">
+
+    </div>
+    <div id="stackable" class="example-sider">
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--
     <script src="smooth-tiles.js"></script>
+    -->
+    <script src="viewing-panels.js"></script>
   </body>
 </html>
