--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -36,6 +36,7 @@
         </button>
       </div>
       <div class="triangle"></div>
+      <div id="stackable" class="example-sider"></div>
     </div>
 
     <!-- FOOTER -->
@@ -74,10 +75,14 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery/test/jquery.js"><\/script>')</script>
+    <!--
     <script src="background.js"></script>
+    -->
     <script src="bottombarlisteners.js"></script>
     <script src="filewindow.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="viewing-panels.js"></script>
+    <script src="music-player.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
